--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^7.0.3",
+    "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
+    "telegram-bot-api": "^2.0.0",
+    "temp": "^0.9.4",
     "wechaty": "^0.60.12",
     "wechaty-puppet-wechat": "^0.28.1"
   }
