--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@alicloud/pop-core": "^1.7.10",
     "cross-env": "^7.0.3",
     "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
