--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
+    "rxjs": "^7.3.0",
     "telegram-bot-api": "^2.0.0",
     "temp": "^0.9.4",
     "wechaty": "^0.60.12",
